[tool.poetry]
name = "technesis"
version = "0.1.0"
description = ""
authors = ["yarolys <lysov.yaroslav.r@mail.ru>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
aiogram = "^3.18.0"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
pandas = "^2.2.3"
dotenv = "^0.9.9"
loguru = "^0.7.3"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
httpx = "^0.28.1"
lxml = "^5.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
